Fix alignment

--- a/css/style.css
+++ b/css/style.css
@@ -2,40 +2,93 @@
 
 body {
   font-family: 'Roboto', sans-serif;
-  background-color: #1F2937
+  background-color: #1F2937;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  justify-content: space-between;
+  margin: 0;
 }
 
 .header {
-  font-size: 24px;
-  color: #F9FAF8;
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
-  font-weight: extra-bold;
+  margin: 20px;
+  padding-inline: 100px;
+}
+
+.header-main {
+  font-size: 24px;
+  color: #F9FAF8;
+  font-weight: 800;
 }
 
 ul {
   display: flex;
   list-style-type: none;
-  align-items: flex-start;
   gap: 20px;
   margin: 0;
 }
 
-a, .hero-text {
+a, 
+.hero-text {
   text-decoration: none;
   font-size: 18px;
   color: #E5E7EB;
+  font-weight: normal;
 }
 
 .hero-title {
   font-size: 48px;
   color: #F9FAF8;
-  font-weight: extra-bold;
+  font-weight: 800;
+  width: 500px;
 }
 
 .sign-up {
   background-color: #3882F6;
-  border: 0;
+  border-radius: 25px;
   color: #F9FAF8;
+}
+
+.hero {
+  display: flex;
+  justify-content: space-between;
+  padding-inline: 350px;
+  margin: 40px;
+}
+
+img {
+  width: 600px;
+  height: 200px;
+}
+
+.main {
+  background-color: white;
+  text-align: center;
+  flex: 1;
+  padding: 20px;
+  margin-top: 30px;
+  justify-content: center;
+}
+
+.info-text {
+  font-size: 36px;
+  font-weight: 800;
+  color: #1F2937;
+  text-align: center;
+}
+
+.footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 18px;
+  color: #E5E7EB;
+  margin: 20px;
+}
+
+.container {
+  display: flex;
 }
